--- a/BAAR/BAAR.Android/packages.config
+++ b/BAAR/BAAR.Android/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid71" />
+  <package id="MailKit" version="1.16.2" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
+  <package id="MimeKit" version="1.16.2" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Annotations" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Compat" version="25.3.1" targetFramework="monoandroid71" />
   <package id="Xamarin.Android.Support.Core.UI" version="25.3.1" targetFramework="monoandroid71" />
