--- a/BAAR/BAAR.Android/BAAR.Android.csproj
+++ b/BAAR/BAAR.Android/BAAR.Android.csproj
@@ -125,6 +125,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccessObject.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
