--- a/BAAR/BAAR.Android/BAAR.Android.csproj
+++ b/BAAR/BAAR.Android/BAAR.Android.csproj
@@ -118,6 +118,8 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Laurie\Logintry.cs" />
+    <Compile Include="Laurie\URLSchemeInterceptor.cs" />
     <Compile Include="Login.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
