--- a/BAAR/BAAR.Android/BAAR.Android.csproj
+++ b/BAAR/BAAR.Android/BAAR.Android.csproj
@@ -57,6 +57,10 @@
       <HintPath>..\..\packages\MimeKit.1.16.2\lib\MonoAndroid10\MimeKit.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.10.0.3\lib\netstandard1.3\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Json" />
@@ -118,7 +122,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AccessTokenObjectt.cs" />
+    <Compile Include="AccessObject.cs" />
     <Compile Include="Laurie\Logintry.cs" />
     <Compile Include="Laurie\URLSchemeInterceptor.cs" />
     <Compile Include="Login.cs" />
