--- a/.gitignore
+++ b/.gitignore
@@ -371,3 +371,6 @@ ModelManifest.xml
 /MTSS_Data_Model/Properties
 /MTSS_Data_Model/MTSS_Data_Model.csproj
 /MTSS_Data_Model
+/ClassLibrary1
+/MTSS_DATAACCESS
+/MTSS_DATA_ACCESS
