--- a/BAAR/BAAR.iOS/BAAR.iOS.csproj
+++ b/BAAR/BAAR.iOS/BAAR.iOS.csproj
@@ -166,10 +166,13 @@
     <None Include="app.config" />
     <None Include="Info.plist" />
     <None Include="Entitlements.plist" />
-    <InterfaceDefinition Include="Main2.storyboard" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ButtonPage.cs" />
+    <Compile Include="ButtonPage.designer.cs">
+      <DependentUpon>ButtonPage.cs</DependentUpon>
+    </Compile>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <Compile Include="ViewController.cs" />
