--- a/BAAR/BAAR.iOS/Info.plist
+++ b/BAAR/BAAR.iOS/Info.plist
@@ -44,5 +44,7 @@
 	<string>KCTC.GoingPro</string>
 	<key>MinimumOSVersion</key>
 	<string>9.2</string>
+	<key>XSLaunchImageAssets</key>
+	<string>Resources/Images.xcassets/LaunchImages.launchimage</string>
 </dict>
 </plist>
