--- a/BAAR/BAAR.iOS/BAAR.iOS.csproj
+++ b/BAAR/BAAR.iOS/BAAR.iOS.csproj
@@ -186,6 +186,7 @@
     <Compile Include="StudentAccount.designer.cs">
       <DependentUpon>StudentAccount.cs</DependentUpon>
     </Compile>
+    <Compile Include="UIDropDown.cs" />
     <Compile Include="Utilities.cs" />
     <Compile Include="ViewController.cs" />
     <Compile Include="ViewController.designer.cs">
