--- a/BAAR/BAAR.iOS/Info.plist
+++ b/BAAR/BAAR.iOS/Info.plist
@@ -26,8 +26,8 @@
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
+		<string>UIInterfaceOrientationPortraitUpsideDown</string>
 		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
@@ -46,5 +46,7 @@
 	<string>Resources/Images.xcassets/LaunchImages.launchimage</string>
 	<key>CFBundleDisplayName</key>
 	<string>Going Pro</string>
+	<key>UIStatusBarHidden</key>
+	<true/>
 </dict>
 </plist>
