--- a/BAAR/BAAR.Android/packages.config
+++ b/BAAR/BAAR.Android/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ConfuserEx" version="0.6.0" targetFramework="monoandroid71" />
   <package id="FastAndroidCamera" version="2.0.0" targetFramework="monoandroid71" />
   <package id="MailKit" version="1.16.2" targetFramework="monoandroid60" />
   <package id="Microsoft.Bcl.Build" version="1.0.21" targetFramework="monoandroid60" />
