--- a/BAAR/BAAR.iOS/BAAR.iOS.csproj
+++ b/BAAR/BAAR.iOS/BAAR.iOS.csproj
@@ -43,7 +43,7 @@
     <MtouchI18n>west</MtouchI18n>
     <MtouchSdkVersion>
     </MtouchSdkVersion>
-    <PlatformTarget>x64</PlatformTarget>
+    <PlatformTarget>AnyCPU</PlatformTarget>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|iPhone' ">
     <DebugType>full</DebugType>
@@ -232,7 +232,9 @@
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
-    <InterfaceDefinition Include="Main.storyboard" />
+    <InterfaceDefinition Include="Main.storyboard">
+      <SubType>Designer</SubType>
+    </InterfaceDefinition>
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
