--- a/BAAR/BAAR.iOS/Info.plist
+++ b/BAAR/BAAR.iOS/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleVersion</key>
-	<string>1.7</string>
+	<string>1.9</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIDeviceFamily</key>
@@ -17,7 +17,7 @@
 	<key>UIMainStoryboardFile~ipad</key>
 	<string>Main</string>
   <key>NSCameraUsageDescription</key>
-  <string>${PRODUCT_NAME} required to scan student badges</string>
+  <string>Camera required to scan student badges</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
@@ -46,9 +46,9 @@
 	<key>UIStatusBarHidden</key>
 	<true/>
 	<key>CFBundleShortVersionString</key>
-	<string>1.7</string>
-	<key>MinimumOSVersion</key>
-	<string>11.0</string>
+	<string>1.9</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>10.2</string>
   <key>CFBundleIconFiles</key>
   <array>
     <string>Icon-60@2x.png</string>
